[package]
name = "advent_of_code_2018"
version = "0.1.0"
authors = ["Ryan O'Beirne <ryanobeirne@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
chrono = "*"
nom = "*"
rayon = "1.0.3"

[[bin]]
name = "day01"
path = "bin/day01.rs"

[[bin]]
name = "day02"
path = "bin/day02.rs"

[[bin]]
name = "day03"
path = "bin/day03.rs"

[[bin]]
name = "day04"
path = "bin/day04.rs"

[[bin]]
name = "day05"
path = "bin/day05.rs"

[[bin]]
name = "day06"
path = "bin/day06.rs"

[[bin]]
name = "day07"
path = "bin/day07.rs"

#[[bin]]
#name = "day08"
#path = "bin/day08.rs"

#[[bin]]
#name = "day09"
#path = "bin/day09.rs"

[[bin]]
name = "day10"
path = "bin/day10.rs"

[[bin]]
name = "day11"
path = "bin/day11.rs"

[[bin]]
name = "day12"
path = "bin/day12.rs"

[[bin]]
name = "day13"
path = "bin/day13.rs"

#[[bin]]
#name = "day14"
#path = "bin/day14.rs"

#[[bin]]
#name = "day15"
#path = "bin/day15.rs"

#[[bin]]
#name = "day16"
#path = "bin/day16.rs"

#[[bin]]
#name = "day17"
#path = "bin/day17.rs"

#[[bin]]
#name = "day18"
#path = "bin/day18.rs"

#[[bin]]
#name = "day19"
#path = "bin/day19.rs"

#[[bin]]
#name = "day20"
#path = "bin/day20.rs"

#[[bin]]
#name = "day21"
#path = "bin/day21.rs"

#[[bin]]
#name = "day22"
#path = "bin/day22.rs"

#[[bin]]
#name = "day23"
#path = "bin/day23.rs"

#[[bin]]
#name = "day24"
#path = "bin/day24.rs"

#[[bin]]
#name = "day25"
#path = "bin/day25.rs"

